<resources>
<<<<<<< HEAD
    <string name="app_name" translatable="false">Design</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_title">Main Title</string>
    <string name="title_activity_route_page">RoutePage</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="capelsebrug_capelle_aan_den_ijssel" translatable="false">Capelsebrug, Capelle aan den Ijssel</string>
    <string name="ov_notifier" translatable="false">OV Notifier</string>
    <string name="active_routes">Active Routes</string>
    <string name="testuser" translatable="false">TestUser</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_theme">Change theme</string>
    <string name="normal">Normal</string>
    <string name="dark">Dark</string>
    <string name="all_routes">All Routes</string>
    <string name="english">English</string>
    <string name="dutch">Dutch</string>
    <string name="change_language">Change Language</string>

    <string name="enter_location">Enter location</string>
    <string name="repeat">Repeat</string>
    <string name="timescheme">Timescheme</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="save">SAVE</string>
=======
    <string name="server_url">http://projectc.caslayoort.nl:80</string>
    <string name="app_name">OV Notifier</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_title">Main Title</string>
    <string name="title_activity_route_page">RoutePage</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_register">Register</string>
>>>>>>> remotes/origin/master
</resources>
