<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingssection"
        android:layout_width="wrap_content"
        android:layout_height="536dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-1dp"
        android:background="#50ffffff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ToggleButton
        android:id="@+id/changelangbutton"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_below="@+id/changepasswordbutton"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="83dp"
        android:layout_toEndOf="@+id/Changelanguage"
        android:layout_toRightOf="@+id/Changethemetext"
        android:background="#ffffff"
        android:text="ToggleButton"
        android:textOff="@string/english"
        android:textOn="@string/dutch" />

    <TextView
        android:id="@+id/Changelanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changepasswordbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="14dp"
        android:text="@string/change_language"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="194dp"
        android:background="@android:color/darker_gray" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#FFFFFF"
        android:fadingEdge="horizontal"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <Button
        android:id="@+id/CloseButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_close_black_24dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/usersection"
        android:layout_width="411dp"
        android:layout_height="135dp"
        android:layout_above="@+id/settingssection"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="2dp"
        android:background="#50ffffff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="88dp"
        android:layout_height="86dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/profile" />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="57dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/usernametext"
        android:layout_width="176dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="91dp"
        android:text="@string/testuser"
        android:textColor="#000000"
        android:textSize="25dp"
        app:fontFamily="@font/proxima" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="124dp"
        android:text="testuser@gmail.com"
        android:textSize="18dp"
        app:fontFamily="@font/proxima" />

    <Button
        android:id="@+id/changeusernamebutton"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="222dp"
        android:background="#ffffff"
        android:text="@string/change_username" />

    <Button
        android:id="@+id/changepasswordbutton"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="282dp"
        android:background="#ffffff"
        android:text="@string/change_password" />

</RelativeLayout>